# TableTennis

./: .gitignore  .travis.yml  README.md  TableTennis.sln
TableTennis/: CMakeLists.txt  CalcCameraMatrix.cpp  Camera.h  Draw.cpp  Hist.cpp  Main.cpp  Reconstruct3D.cpp  Table.cpp  TableTennis.vcxproj  TableTennis.vcxproj.filters  Tools.h
TableTennis/BgSubtractor/: CMakeLists.txt  Codebook.cpp  Codebook.h  ConnectedComp.cpp  CropImage.cpp  CropUtils.cpp  CropUtils.h  Main.cpp  Main.h  Track.cpp  Track.h
TableTennis/BgSubtractor/include/: Codebook.h  CropUtils.h  Main.h  Track.h
TableTennis/Kalman/: CMakeLists.txt  Kalman.cpp  main.cpp  track.cpp
TableTennis/Kalman/include/: Kalman.h
TableTennis/Reconstruct3D/: CMakeLists.txt  GetZScale.cpp  Main.cpp  Main.h  Reconstruct.cpp  RemapTest.cpp
TableTennis/Reconstruct3D/include/: Main.h  Reconstruct.h
TableTennis/scripts/: gen_label.py
